# UCI_3097_AI_Solutions_Developer_public

./: README.md  e -Force .git
MODULE_942/review-intelligence/: .gitignore  README.md  app.py  main.py  pyproject.toml  test_loader.py
MODULE_942/review-intelligence-v2/: .gitignore  README.md  Runguide.md  app.py  main.py  pyproject.toml  test_amazon.py  test_ebay.py  test_etsy.py  test_walmart.py
MODULE_942/review-intelligence-v2/backend/: main.py
MODULE_942/review-intelligence-v2/scrapers/: amazon.py  detector.py  etsy.py  walmart.py
MODULE_942/review-intelligence-v2/services/: embeddings.py  llm.py  vector_store.py
MODULE_942/review-intelligence/backend/: main.py
MODULE_942/review-intelligence/services/: llm.py  loader.py  vector_store.py
