[project]
name = "review-intelligence-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
